--- a/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -32,7 +32,7 @@
 
   "DarkestMod:Defender": {
     "NAME": "Defender",
-    "DESCRIPTION": "Apply !M! Plated Armour and !M! darkestmod:Riposte "
+    "DESCRIPTION": "Apply !M! Plated Armour and !M! darkestmod:Riposte NL Exhaust "
   },
   "DarkestMod:Divine Comfort": {
     "NAME": "Divine Comfort",
