--- a/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -1,8 +1,8 @@
 {
   "DarkestMod:Absolution": {
     "NAME": "Absolution",
-    "DESCRIPTION": "Heal for !M! and remove 8 darkestmod:Stress. NL Exhaust.",
-    "UPGRADE_DESCRIPTION": "Heal for !M! and remove 12 darkestmod:Stress. NL Exhaust."
+    "DESCRIPTION": "Heal for !M! and heal 8 darkestmod:Stress. NL Exhaust.",
+    "UPGRADE_DESCRIPTION": "Heal for !M! and heal 12 darkestmod:Stress. NL Exhaust."
   },
 
   "DarkestMod:Antiques": {
@@ -12,13 +12,14 @@
 
   "DarkestMod:Barbaric YAWP": {
     "NAME": "Barbaric YAWP",
-    "DESCRIPTION": "If the target intends to attack apply Stunned else gain 2 Strength. Nl Exhaust.",
+    "DESCRIPTION": "If the target intends to attack apply Stunned else gain 2 Strength. NL Exhaust.",
     "UPGRADE_DESCRIPTION": "If the target intends to attack apply Stunned else gain 2 Strength. "
   },
 
   "DarkestMod:Beast Bile": {
     "NAME": "Beast Bile",
-    "DESCRIPTION": "Apply !M! darkestmod:Blight and take 4 darkestmod:Stress"
+    "DESCRIPTION": "Gain 4 darkestmod:Stress. NL Apply !M! darkestmod:Blight to target creature.",
+    "UPGRADE_DESCRIPTION": "Gain 4 darkestmod:Stress. NL Apply !M! darkestmod:Blight and then darkestmod:Trigger darkestmod:Blight on target creature."
   },
 
   "DarkestMod:Bolster": {
@@ -36,7 +37,7 @@
   },
   "DarkestMod:Divine Comfort": {
     "NAME": "Divine Comfort",
-    "DESCRIPTION": "Heal yourself and all enemies for !M! "
+    "DESCRIPTION": "Heal yourself and ALL enemies for !M! "
   },
 
   "DarkestMod:Duelists Advance": {
@@ -46,7 +47,7 @@
 
   "DarkestMod:Festering Vapours": {
     "NAME": "Festering Vapours",
-    "DESCRIPTION": "Apply !M! darkestmod:blight and then trigger the darkestmod:blight damage"
+    "DESCRIPTION": "Apply !M! darkestmod:blight and darkestmod:Trigger darkestmod:blight damage on ALL enemies."
   },
 
   "DarkestMod:Flashing Daggers": {
@@ -76,23 +77,23 @@
 
   "DarkestMod:Inspiring Cry": {
     "NAME": "Inspiring Cry",
-    "DESCRIPTION": "Remove !M! Stress and +5 darkestmod:Light."
+    "DESCRIPTION": "Heal !M! Stress and +5 darkestmod:Light."
   },
 
   "DarkestMod:Noxious Blast": {
     "NAME": "Noxious Blast",
-    "DESCRIPTION": "Trigger darkestmod:Blight !M! times"
+    "DESCRIPTION": " On target creature darkestmod:trigger darkestmod:Blight !M! times"
   },
 
   "DarkestMod:Mark For Death": {
     "NAME": "Mark For Death",
-    "DESCRIPTION": "Apply !M! darkestmod:Marked to all enemies."
+    "DESCRIPTION": "Apply !M! darkestmod:Marked to ALL enemies."
   },
 
   "DarkestMod:Plague Grenade": {
     "NAME": "Plague Grenade",
-    "DESCRIPTION": "Trigger darkestmod:Blight",
-    "UPGRADE_DESCRIPTION":"Trigger darkestmod:Blight and draw a card"
+    "DESCRIPTION": "darkestmod:Trigger darkestmod:Blight on target creature",
+    "UPGRADE_DESCRIPTION":"darkestmod:Trigger darkestmod:Blight on target creature and then draw a card"
   },
 
   "DarkestMod:Protect Me": {
@@ -112,7 +113,7 @@
 
   "DarkestMod:Rain of Sorrows": {
     "NAME": "Rain of Sorrows",
-    "DESCRIPTION": "Apply !M! darkestmod:Bleed and 2 Vulnerable to all"
+    "DESCRIPTION": "Apply !M! darkestmod:Bleed and 2 Vulnerable to ALL enemies"
   },
 
   "DarkestMod:Redeem": {
@@ -122,7 +123,7 @@
 
   "DarkestMod:ShadowFade": {
     "NAME": "Shadow Fade",
-    "DESCRIPTION": "Gain !B! Block and apply !M! weak to all enemies "
+    "DESCRIPTION": "Gain !B! Block and apply !M! weak to ALL enemies "
   },
 
   "DarkestMod:Serpent Sway": {
@@ -148,7 +149,7 @@
 
   "DarkestMod:Torch": {
     "NAME": "Torch",
-    "DESCRIPTION": "And apply !B! block, and gain !M! darkestmod:Light"
+    "DESCRIPTION": "Apply !B! block, and gain !M! darkestmod:Light"
   },
 
   "DarkestMod:Tracking Shot": {
@@ -159,23 +160,23 @@
 
   "DarkestMod:Weakening Curse": {
     "NAME": "Weakening Curse",
-    "DESCRIPTION": "Gain 5 stress and target enemy loses 2 Strength and is darkestmod:Marked. NL Exhaust. ",
-    "UPGRADE_DESCRIPTION":"Gain 5 stress and target enemy loses 2 Strength and is darkestmod:Marked."
+    "DESCRIPTION": "Gain 5 stress. NL Target enemy loses 2 Strength and is darkestmod:Marked. NL Exhaust. ",
+    "UPGRADE_DESCRIPTION":"Gain 5 stress. NL Target enemy loses 2 Strength and is darkestmod:Marked."
   },
 
   "DarkestMod:Withstand": {
     "NAME": "Withstand",
-    "DESCRIPTION": "Apply 2 darkestmod:Marked to yourself and gain !M! Dexterity. NL Exhaust."
+    "DESCRIPTION": "Apply 1 darkestmod:Marked to yourself and gain !M! Dexterity. NL Exhaust."
   },
 
   "DarkestMod:Wyrd Reconstruction": {
     "NAME": "Wyrd Reconstruction",
-    "DESCRIPTION": "Gain 3 darkestmod:Bleed and Heal between 0 & 12. NL Exhaust"
+    "DESCRIPTION": "Apply 3 darkestmod:Bleed to yourself. NL Heal between 0 & 12 Health. NL Exhaust"
   },
 
   "DarkestMod:Zealous Accusation": {
     "NAME": "Zealous Accusation",
-    "DESCRIPTION": "darkestmod:Stun all enemies. NL Exhaust."
+    "DESCRIPTION": "darkestmod:Stun ALL enemies. NL Exhaust."
   },
 
   "DarkestMod:attackPoisonTest": {
@@ -190,17 +191,17 @@
 
   "DarkestMod:Adders Kiss": {
     "NAME": "Adder's Kiss",
-    "DESCRIPTION": "Trigger darkestmod:Blight damage. And then apply !M! darkestmod:Blight"
+    "DESCRIPTION": "On target creature darkestmod:trigger darkestmod:Blight damage. And then apply !M! darkestmod:Blight"
   },
 
   "DarkestMod:Blindfire": {
     "NAME": "Blindfire",
-    "DESCRIPTION": "Deal !D! damage !M! times."
+    "DESCRIPTION": "Deal !D! damage to a random enemy !M! times."
   },
 
   "DarkestMod:Breakthrough": {
     "NAME": "Breakthrough",
-    "DESCRIPTION": "Remove block and Deal !D! damage X times to all enemies."
+    "DESCRIPTION": "Remove enemy block and Deal !D! damage X times to ALL enemies."
   },
 
   "DarkestMod:Chop": {
@@ -220,7 +221,7 @@
 
   "DarkestMod:Dirk Stab": {
     "NAME": "Dirk Stab",
-    "DESCRIPTION": "Deal !D! damage this ignores Block."
+    "DESCRIPTION": "Enemy loses !D! health. NL This does not trigger damage affects and ignores Block."
   },
 
   "DarkestMod:DogBiscuit": {
@@ -239,7 +240,7 @@
 
   "DarkestMod:GrapeshotBlast": {
     "NAME": "Grapeshot Blast",
-    "DESCRIPTION": "Deal !D! damage to all enemies. NL Exhaust"
+    "DESCRIPTION": "Deal !D! damage to ALL enemies. NL Exhaust"
   },
   "DarkestMod:Hound's Harry": {
     "NAME": "Hound's Harry",
@@ -248,17 +249,17 @@
 
   "DarkestMod:Harvest": {
     "NAME": "Harvest",
-    "DESCRIPTION": "Deal !D! damage. And apply !M! darkestmod:Bleed to all enemies"
+    "DESCRIPTION": "Deal !D! damage. And apply !M! darkestmod:Bleed to ALL enemies"
   },
 
   "DarkestMod:Incision": {
     "NAME": "Incision",
-    "DESCRIPTION": "Deal !D! damage. And apply !M! darkestmod:Bleed to the enemy"
+    "DESCRIPTION": "Deal !D! damage. And apply !M! darkestmod:Bleed to the target enemy"
   },
 
   "DarkestMod:OpenVein": {
     "NAME": "Open Vein",
-    "DESCRIPTION": "Deal !D! damage, and all attacks that deal damage apply 3 darkestmod:Bleed this turn."
+    "DESCRIPTION": "Deal !D! damage, Until end of tun all attacks also apply 3 darkestmod:Bleed ."
   },
 
   "DarkestMod:PickToTheFace": {
@@ -268,7 +269,7 @@
 
   "DarkestMod:Pierce": {
     "NAME": "Pierce",
-    "DESCRIPTION": "Remove all Block from the enemy and Deal !D! damage."
+    "DESCRIPTION": "Remove all Block from target enemy and Deal !D! damage."
   },
 
     "DarkestMod:Pistol Shot": {
@@ -314,8 +315,8 @@
   },
   "DarkestMod:Stunning Blow": {
     "NAME": "Stunning Blow",
-    "DESCRIPTION": "Deal !D! damage and if the enemy intended to attack darkestmod:Stun. NL Ethereal.",
-    "UPGRADE_DESCRIPTION": "Deal !D! damage and if the enemy intended to attack darkestmod:Stun."
+    "DESCRIPTION": "Deal !D! damage and if the enemy intended to attack apply darkestmod:Stun. NL Ethereal.",
+    "UPGRADE_DESCRIPTION": "Deal !D! damage and if the enemy intended to attack apply darkestmod:Stun."
   },
 
   "DarkestMod:Sniper Shot": {
@@ -330,7 +331,7 @@
 
   "DarkestMod:WickedHack": {
     "NAME": "Wicked Hack",
-    "DESCRIPTION": "Deal !D! damage to all enemies."
+    "DESCRIPTION": "Deal !D! damage to ALL enemies."
   },
 
   "DarkestMod:Abomination": {
@@ -387,7 +388,7 @@
 
   "DarkestMod:Jester": {
       "NAME": "Jester",
-      "DESCRIPTION": "Reduce stress by !M! and all incoming stress is reduced by 1."
+      "DESCRIPTION": "Reduce stress by !M! and all incoming stress from damage is reduced by 1."
   },
 
   "DarkestMod:Leper": {
@@ -402,12 +403,12 @@
 
   "DarkestMod:Occultist": {
     "NAME": "Occultist",
-    "DESCRIPTION": "Apply 3 Bleed, -5 Light, draw !M! more cards per turn "
+    "DESCRIPTION": "Apply 3 Bleed to yourself, lose -5 Light, NL draw !M! more cards per turn "
   },
 
   "DarkestMod:PlagueDoctor": {
     "NAME": "Plague Doctor",
-    "DESCRIPTION": "Trigger darkestmod:Blight. Whenever attacked, apply !M! darkestmod:Blight to ALL enemies."
+    "DESCRIPTION": "When attacked and dealt damage, apply !M! darkestmod:Blight to ALL enemies."
   },
 
   "DarkestMod:Sheildbreaker": {
@@ -493,7 +494,7 @@
   },
   "DarkestMod:CurseKleptomaniac": {
     "NAME": "Kleptomaniac",
-    "DESCRIPTION": "Unplayable. NL At the end of turn Exhaust a random card from your hand and Lose 20 Gold."
+    "DESCRIPTION": "Unplayable. NL At the end of turn Exhaust a random card from your hand and Lose 10 Gold."
   },
 
   "DarkestMod:CurseCreepingCough": {
